Fix heigth scrollbar and buttons of load files and ready to execute responsive

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -74,6 +74,7 @@
 
   ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
   }
   ::-webkit-scrollbar-track {
     background: hsl(var(--background));
